--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -107,6 +107,6 @@ steps:
       '--platform',
       'managed' # Hoặc 'gke' nếu bạn dùng Cloud Run for Anthos
       # Thêm các cờ khác nếu cần, ví dụ:
-      # '--allow-unauthenticated',
+      '--allow-unauthenticated',
       # '--set-env-vars', 'KEY=VALUE'
     ]
