--- a/AuthAPI/AuthAPI.csproj
+++ b/AuthAPI/AuthAPI.csproj
@@ -32,4 +32,8 @@
     <Folder Include="Infrastructure\Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Dummy\SharedLib\SharedLib.csproj" />
+  </ItemGroup>
+
 </Project>
